--- a/canvases/init.html
+++ b/canvases/init.html
@@ -2,6 +2,13 @@
 <html>
 
 <head>
+  <style>
+    #c {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 
